Pass pip caching proxy environment during docker builds

--- a/docker/Dockerfile.centos7
+++ b/docker/Dockerfile.centos7
@@ -3,6 +3,10 @@ FROM centos:centos7
 ARG MINICONDA_VERSION=4.7.12.1
 ARG TINI_VERSION=v0.16.1
 
+# for pypi caching proxy
+ARG PIP_INDEX_URL
+ARG PIP_TRUSTED_HOST
+
 # Install miniconda, reference: https://hub.docker.com/r/continuumio/miniconda3/dockerfile
 # ENV LANG=C.UTF-8 LC_ALL=C.UTF-8
 ENV PATH /opt/conda/bin:$PATH
@@ -46,10 +50,7 @@ RUN cd /usr/src/opendiamond && autoreconf -f -i \
  && ./configure CFLAGS=-m32 --prefix=/usr && make -C libfilter install && make clean \
  && ./configure --prefix=/usr --libdir=/usr/lib64 && make install && make clean \
  && ldconfig \
- && conda install -c conda-forge m2crypto \
- && conda install -c anaconda pyyaml \
- && python setup.py install \
- && rm -rf build dist *.egg-info \
- && conda clean --all -y
+ && pip install . \
+ && rm -rf build dist *.egg-info
 
 COPY extract-filters /usr/local/bin
