--- a/docker/Dockerfile.buster
+++ b/docker/Dockerfile.buster
@@ -3,6 +3,7 @@ FROM debian:buster
 ARG MINICONDA_VERSION=4.7.12.1
 ARG TINI_VERSION=v0.16.1
 
+# for pypi caching proxy
 ARG PIP_INDEX_URL
 ARG PIP_TRUSTED_HOST
 
@@ -46,9 +47,7 @@ ADD opendiamond-HEAD.tar.gz /usr/src/opendiamond
 
 RUN cd /usr/src/opendiamond \
  && autoreconf -f -i && ./configure && make install && make clean \
- && conda install --freeze-installed -c conda-forge m2crypto \
  && pip install . \
- && rm -rf build dist *.egg-info \
- && conda clean --all -y
+ && rm -rf build dist *.egg-info
 
 COPY extract-filters /usr/local/bin
