Tweak for the multiline commands in gitlab-ci.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,16 +26,16 @@ setup_cache:
     - apk add git
     - git archive --output=docker/opendiamond-HEAD.tar.gz HEAD
     - |
-      [ "$CI_COMMIT_REF_NAME" = "master" ] &&
-        IMAGE_TAG="$CI_REGISTRY_IMAGE" ||
+      [ "$CI_COMMIT_REF_NAME" = "master" ] && IMAGE_TAG="$CI_REGISTRY_IMAGE" ||
         IMAGE_TAG="$CI_REGISTRY_IMAGE/$CI_COMMIT_REF_NAME"
     - docker pull $IMAGE_TAG:$DIST || true
-    - >
-      docker build --cache-from $IMAGE_TAG:$DIST
-        --build-arg PIP_INDEX_URL=http://$PROXPI_SERVICE_HOST:5000/index/
-        --build-arg PIP_TRUSTED_HOST=$PROXPI_SERVICE_HOST
-        -t $IMAGE_TAG:$DIST -f docker/Dockerfile.$DIST docker
-    - docker push $IMAGE_TAG:$DIST
+    - |
+      docker build -t $IMAGE_TAG:$DIST -f docker/Dockerfile.$DIST \
+        --cache-from $IMAGE_TAG:$DIST \
+        --build-arg PIP_INDEX_URL=http://$PROXPI_SERVICE_HOST:5000/index/ \
+        --build-arg PIP_TRUSTED_HOST=$PROXPI_SERVICE_HOST \
+        docker
+    - docker push $IMAGE_TAG:$DIST \
   cache:
     policy: pull
 
