Install m2crypto with conda so we don't have to recompile.
reverts parts of 37f313a9acfa33fdc06e5f8538d5d542b19750f7

--- a/docker/Dockerfile.buster
+++ b/docker/Dockerfile.buster
@@ -47,5 +47,7 @@ ADD opendiamond-HEAD.tar.gz /usr/src/opendiamond
 
 RUN cd /usr/src/opendiamond \
  && autoreconf -f -i && ./configure && make install && make clean \
+ && conda install --freeze-installed -c conda-forge m2crypto \
  && pip install . \
- && rm -rf build dist *.egg-info
+ && rm -rf build dist *.egg-info \
+ && conda clean --all -y
