--- a/docker/Dockerfile.xenial
+++ b/docker/Dockerfile.xenial
@@ -47,5 +47,7 @@ ADD opendiamond-HEAD.tar.gz /usr/src/opendiamond
 
 RUN cd /usr/src/opendiamond \
  && autoreconf -f -i && ./configure && make install && make clean \
+ && conda install --freeze-installed -c conda-forge m2crypto \
  && pip install . \
- && rm -rf build dist *.egg-info
+ && rm -rf build dist *.egg-info \
+ && conda clean --all -y
