--- a/environment.yml
+++ b/environment.yml
@@ -1,15 +1,16 @@
 name: diamond-py3
 channels:
-  - conda-forge
+  - anaconda
   - defaults
+  - conda-forge
 dependencies:
   - _libgcc_mutex=0.1=main
   - appdirs=1.4.3=py37h28b3542_0
   - asn1crypto=1.0.1=py37_0
   - astroid=2.3.1=py37_0
   - bzip2=1.0.8=h516909a_1
-  - ca-certificates=2019.9.11=hecc5488_0
-  - certifi=2019.9.11=py37_0
+  - ca-certificates=2020.6.24=0
+  - certifi=2020.6.20=py37_0
   - cffi=1.12.3=py37h2e261b9_0
   - chardet=3.0.4=py37_1003
   - click=7.0=py37_0
@@ -43,10 +44,10 @@ dependencies:
   - ncurses=6.1=he6710b0_1
   - nettle=3.4.1=h1bed415_1002
   - openh264=1.8.0=hdbcaa40_1000
-  - openssl=1.1.1c=h516909a_0
+  - openssl=1.1.1g=h7b6447c_0
   - packaging=19.2=py_0
   - pip=19.2.3=py37_0
-  - psutil=5.6.3=py37h516909a_0
+  - psutil=5.7.0=py37h7b6447c_0
   - pycparser=2.19=py37_0
   - pycurl=7.43.0.3=py37h16ce93b_0
   - pylint=2.4.2=py37_0
@@ -80,4 +81,3 @@ dependencies:
     - murmurhash3==2.3.5
     - pillow==6.2.0
     - python-dateutil==2.8.0
-
