Fix for Centos build failures
- Centos6 build fails to find repository, maybe it got discontinued?
- add intellectual property disclosure tag for xml2rfc on Centos7

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,10 +39,10 @@ setup_cache:
   cache:
     policy: pull
 
-build.centos6:
-  <<: *docker_build
-  variables:
-    DIST: centos6
+#build.centos6:
+#  <<: *docker_build
+#  variables:
+#    DIST: centos6
 
 build.centos7:
   <<: *docker_build
